# GuanFu

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/actions/guanfu-build/: action.yml
.github/workflows/: build-and-release.yml  build-template.yml  release.yml
client/RA/: Cargo.toml  README.md  evi
client/RA/src/: main.rs  verifier.rs
docs/: buildspec.md  koji_bootstrap_toolchain_fallback.md  local_rebuild_guide.md  workflow_usage_guide.md
scripts/: anolis_runner.py  build-runner.sh  run_build.py  validate_buildspec.py
scripts/os_runners/: __init__.py  alinux_runner.py  anolis_runner.py  base_runner.py
server/EGS/attester/: Cargo.toml
server/EGS/attester/src/: main.rs  server.rs
server/EGS/lib/src/: lib.rs
src/: build-runner.sh  run_build.py  validate_buildspec.py
src/guanfu/: __init__.py  buildspec_rebuild.py  cli.py
src/guanfu/koji_rebuild/: __init__.py  assessment.py  client.py  command.py  compare.py  container_executor.py  downloader.py  mock_config.py  mock_runner.py  repo_fallback.py  report.py  resolver.py  rpm_name.py  vm_executor.py
src/os_runners/: anolis_runner.py  base_runner.py
tests/: test_container_executor.py  test_diagnostics.py  test_mock_config.py  test_mock_runner.py  test_repo_fallback.py  test_vm_executor.py
