[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "guanfu"
version = "0.1.0"
description = "GuanFu local rebuild tooling"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "Apache-2.0" }

[project.scripts]
guanfu = "guanfu.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
